--- a/contato.html
+++ b/contato.html
@@ -961,7 +961,7 @@ margin-top: -50px;
             <ul>
                 <li><img src="Localizacao.png" alt="Icon 2" class="icon icon-pilar">Rua Episcopal, 1859, Centro, São Carlos, SP</li>
                 <li><img src="comunicacao.png" alt="Icon 3" class="icon icon-telefone">(16) 3362-5044</li>
-                <li><img src="Email.png" alt="Icon 4" class="icon icon-email">suporte@colsaocarlos.com.br</li>
+                <li><img src="email.png" alt="Icon 4" class="icon icon-email">suporte@colsaocarlos.com.br</li>
             </ul>
         </div>
     </div>
